drop all tables

--- a/templates/delete.html
+++ b/templates/delete.html
@@ -4,13 +4,13 @@
 
 <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-md-4">
 
-  <h2>New Import</h2>
+  <h2>Delete all stored files</h2>
 
   <form method=post enctype=multipart/form-data>
-    <input type=file name=file>
-    <input type=submit value=Upload>
+    <input type=submit value=Delete>
   </form>
-  
+
+
 </main>
 
 {% endblock %}
