--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
 
 <body>
   <nav class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
-    <a class="navbar-brand col-md-3 col-lg-2 mr-0 px-3" href="#">Dashboard</a>
+    <a class="navbar-brand col-md-3 col-lg-2 mr-0 px-3" href="{{ url_for('home') }}">Dashboard</a>
     <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-toggle="collapse" data-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -29,7 +29,7 @@
         <div class="sidebar-sticky pt-3">
           <ul class="nav flex-column">
             <li class="nav-item">
-              <a class="nav-link active" href="#">
+              <a class="nav-link active" href="{{ url_for('home') }}">
                 <span data-feather="home"></span>
                 Home <span class="sr-only">(current)</span>
               </a>
@@ -47,9 +47,15 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">
+              <a class="nav-link" href="{{ url_for('delete_tables') }}">
                 <span data-feather="trash-2"></span>
                 Delete all
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">
+                <span data-feather="settings"></span>
+                Config
               </a>
             </li>
           </ul>
