adding table view

--- a/templates/delete.html
+++ b/templates/delete.html
@@ -7,7 +7,7 @@
   <h2>Delete all stored files</h2>
 
   <form method=post enctype=multipart/form-data>
-    <input type=submit value=Delete>
+    <button type="submit" class="btn btn-outline-danger">Delete</button>
   </form>
 
 
