--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
 
 <body>
   <nav class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
-    <a class="navbar-brand col-md-3 col-lg-2 mr-0 px-3" href="{{ url_for('home') }}">Dashboard</a>
+    <a class="navbar-brand col-md-3 col-lg-2 mr-0 px-3" href="{{ url_for('home') }}">Portfolio Loaders</a>
     <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-toggle="collapse" data-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -37,19 +37,19 @@
             <li class="nav-item">
               <a class="nav-link" href="{{ url_for('new_import') }}">
                 <span data-feather="file-text"></span>
-                Import file
+                Import
               </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">
                 <span data-feather="layers"></span>
-                Combine files
+                Combine
               </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="{{ url_for('delete_tables') }}">
                 <span data-feather="trash-2"></span>
-                Delete all
+                Delete
               </a>
             </li>
             <li class="nav-item">
