--- a/templates/base.html
+++ b/templates/base.html
@@ -43,19 +43,19 @@
             <li class="nav-item">
               <a class="nav-link" href="#">
                 <span data-feather="layers"></span>
-                Combine
+                Combine - TODO
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('delete_tables') }}">
+              <a class="nav-link" href="{{ url_for('delete_all_tables') }}">
                 <span data-feather="trash-2"></span>
-                Delete
+                Delete all
               </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">
                 <span data-feather="settings"></span>
-                Config
+                Config - TODO
               </a>
             </li>
           </ul>
