--- a/templates/import.html
+++ b/templates/import.html
@@ -10,7 +10,17 @@
     <input type=file name=file>
     <input type=submit value=Upload>
   </form>
-  
+  {% with messages = get_flashed_messages() %}
+    {% if messages %}
+      <ul class=flashes>
+      {% for message in messages %}
+        <li>{{ message }}</li>
+      {% endfor %}
+      </ul>
+    {% endif %}
+  {% endwith %}
+
+
 </main>
 
 {% endblock %}
