store combined table

--- a/templates/base.html
+++ b/templates/base.html
@@ -43,7 +43,7 @@
             <li class="nav-item">
               <a class="nav-link" href="{{ url_for('combine_tables') }}">
                 <span data-feather="layers"></span>
-                Combine - TODO
+                Combine
               </a>
             </li>
             <li class="nav-item">
