--- a/templates/combine.html
+++ b/templates/combine.html
@@ -19,6 +19,7 @@
       <label class="form-control">{{table[0]}}</label>
     </div>
     {% endfor %}
+    <input type="text" class="form-control" name="table_name">
     <button class="btn btn-primary btn-lg btn-block" type="submit">Combine</button>
   </form>
 
