--- a/templates/base.html
+++ b/templates/base.html
@@ -62,8 +62,12 @@
         </div>
       </nav>
 
+      <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-md-4" style="margin-top: 15px">
+
       {% block content %}
       {% endblock %}
+
+    </main>
 
     </div>
   </div>
