changes to delete (select all)

--- a/templates/import.html
+++ b/templates/import.html
@@ -2,7 +2,9 @@
 
 {% block content %}
 
-<h2>New Import</h2>
+<div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+  <h1 class="h2">New Import</h1>
+</div>
 
 <form method=post enctype=multipart/form-data>
   <input type=file name=file>
