--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,15 @@
 
 {% block content %}
 
-<h2>Available Files</h2>
+<div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+  <h1 class="h2">Available Files</h1>
+  <div class="btn-toolbar mb-2 mb-md-0">
+    <a class="btn btn-primary" href="{{ url_for('new_import') }}">
+      Import file
+    </a>
+  </div>
+</div>
+
 
 {% for table in tables %}
 <div class="row mb-3">
