--- a/templates/base.html
+++ b/templates/base.html
@@ -49,7 +49,7 @@
             <li class="nav-item">
               <a class="nav-link" href="{{ url_for('delete_all_tables') }}">
                 <span data-feather="trash-2"></span>
-                Delete all
+                Delete
               </a>
             </li>
             <li class="nav-item">
