--- a/templates/delete.html
+++ b/templates/delete.html
@@ -2,10 +2,30 @@
 
 {% block content %}
 
-<h2>Delete all stored files</h2>
+<div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+  <h1 class="h2">Delete stored files</h1>
+</div>
 
-<form method=post enctype=multipart/form-data>
-  <button type="submit" class="btn btn-outline-danger">Delete</button>
+<form method="POST">
+  <div class="input-group mb-3">
+    <div class="input-group-prepend">
+      <div class="input-group-text">
+        <input type="checkbox" id="selectall" name="selectall" onclick="toggle(this)" autocomplete="off" unchecked>
+      </div>
+    </div>
+    <label class="form-control" for="selectall">Select All</label>
+  </div>
+  {% for table in tables %}
+  <div class="input-group mb-3">
+    <div class="input-group-prepend">
+      <div class="input-group-text">
+        <input type="checkbox" name="get_table" value="{{table[0]}}">
+      </div>
+    </div>
+    <label class="form-control">{{table[0]}}</label>
+  </div>
+  {% endfor %}
+  <button type="submit" class="btn btn-danger">Delete Selected</button>
 </form>
 
 {% endblock %}
