--- a/templates/view.html
+++ b/templates/view.html
@@ -2,9 +2,9 @@
 
 {% block content %}
 
-<h3>
-  {{title}}
-</h3>
+<div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+  <h1 class="h2">{{title}}</h1>
+</div>
 
 {{ table|safe }}
 
